[tool.poetry]
name = "memtree"
version = "0.1.0"
description = "Linux memory usage visualization tool"
authors = ["zerint <zerint@github.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
